# FolderRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_GUI.md  config.yaml  conftest.py  generate.py  gui.py  pyproject.toml  requirements.txt  start.cmd  start.sh  task_progress_todo.md  启动 FolderRAG Desktop.bat
.github/workflows/: ci.yml
src/: __init__.py  chunker.py  constants.py  embedder.py  gui_scanner.py  main.py  utils.py  vector_store.py  watcher.py
src/api/: schemas.py  server.py
src/api/routes/: docs.py  search.py
src/chunker/: __init__.py
src/generator/: __init__.py  portal.py  templates.py
src/generator/templates/: doc_page.html  index_page.html  skipped_page.html  subpage.html
src/parser/: __init__.py  binary_parser.py  dispatcher.py  office_parser.py  pdf_parser.py  text_parser.py
src/web/static/: app.js  index.html
src/web/templates/: search_results.html
test_data/: test.txt
test_output/: index.html
test_portal/: index.html
test_portal/docs/: FolderRAG_egg-info_PKG-INFO.html  FolderRAG_egg-info_SOURCES.html  FolderRAG_egg-info_requires.html  generator___init.html  generator_portal.html  generator_portal_part2.html  generator_templates.html  generator_templates_part2.html  init.html  parser___init.html  parser_dispatcher.html  parser_office_parser.html  parser_pdf_parser.html  parser_text_parser.html
tests/: conftest.py  test_api.py  test_cli.py  test_parser.py  test_portal.py
