[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FolderRAG"
version = "1.0.0"
description = "📁 → 📄 文件夹转知识 HTML 导出工具：递归扫描本地文件夹，自动解析 PDF/Word/Excel/PPT/文本文件，生成结构化 HTML 文件供 AI/LLM 阅读"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "FolderRAG Contributors"}
]
keywords = ["document-parser", "pdf", "html-generator", "llm", "rag"]

dependencies = [
    "python-magic>=0.4.27",
    "pdfminer.six>=20240706",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "beautifulsoup4>=4.12.3",
    "charset-normalizer>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/ABaLaQiYaShanMaiI/FolderRAG"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
