[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FolderKnowledgeSiteGeneratorForAI"
version = "1.0.0"
description = "📁 → 🌐 轻量离线文档门户：递归扫描本地文件夹，自动解析 PDF/Word/Excel/PPT/文本文件，生成可搜索的知识门户供浏览器 AI 阅读"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ABaLaQiYaShanMaiI"}
]
keywords = ["document-parser", "pdf", "html-generator", "knowledge-portal", "browser-ai", "offline"]

dependencies = [
    "python-magic>=0.4.27",
    "pdfminer.six>=20221105",
    "python-docx>=0.8.11",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    # charset-normalizer and beautifulsoup4 removed (not actively used by code;
    # chardet used in text_parser.py is an optional dependency handled via try/except)
    "chardet>=5.0",
    # tkinterdnd2 is optional GUI dependency; users who need drag-and-drop install separately
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
gui = [
    "tkinterdnd2>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/ABaLaQiYaShanMaiI/FolderKnowledgeSiteGeneratorForAI"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]